# Choose-Another-Game

./: README.md  concurrency_gate.gdextension  icon.svg.import  project.godot
Scripts/: area_burger_shop_zone.gd  area_door_in.gd  area_door_out.gd  burger_power_up.gd  defeat_final_panel.gd  easter_egg_area.gd  game_manager.gd  game_split.gd  hud.gd  livello.gd  main_menu.gd  mutex_zone.gd  pack_a_punch_area.gd  pause_node.gd  pizza_power_up.gd  player.gd  round_manager.gd  zombie.gd  zombie_spawner.gd
models/busses/: bus.glb  bus.glb.import  bus_Bus.png.import  bus_Glass.png.import  bus_Seating.png.import  bus_Seating_01.png.import
models/enemies/: sinisterMonster.glb  sinisterMonster.glb.import  sinisterMonster_Character_Monster_04.png.import  swordMonster.glb  swordMonster.glb.import  swordMonster_EspadaRef.png.import  zombie1.glb  zombie1.glb.import  zombie1_Character_Monster_05.png.import
models/graphics/: Hit_aura.tres  Hit_aura_sparks.tres
models/guns/: fucile.glb  fucile.glb.import  fucile_Tac_M14_Text.png.import
models/obstacles/: Car7.glb  Car7.glb.import  Car7_car7.png.import  autobus.glb  autobus.glb.import  autobus_Bus.png.import  autobus_Glass.png.import  autobus_Seating.png.import  autobus_Seating_01.png.import  barrCemento1.glb  barrCemento1.glb.import  barrCemento1_concrete_barriers.png.import  (+50 more)
native/concurrency_gate/: CMakeLists.txt
native/concurrency_gate/src/: concurrency_gate.cpp  concurrency_gate.h  entry.cpp  kill_arbiter.cpp  kill_arbiter.h  register_types.cpp  register_types.h  shop.cpp  shop.h  spirit_house.cpp  spirit_house.h
(+412 files in other folders)
